# daggerverse

./: .gitignore  README.md
envupdate/: README.md  dagger.json  pyproject.toml
envupdate/src/envupdate/: __init__.py  main.py
gitclient/: README.md  dagger.json  pyproject.toml
gitclient/assets/: git-askpass.sh
gitclient/src/gitclient/: __init__.py  main.py
